Add: information of ymf825board

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<div class="columns sixteen" data-0="opacity: 1" data-180="opacity: 0">
 				<h1>Welcome <br>to <br>Yamaha-WebMusic !</h1>
 				<a class="button" id="link-nsx1-apps-top">nsx1-apps</a>
-				<a class="button" id="link-fm-firm-top">SD-1 Firmware</a>
+				<a class="button" id="link-fm-firm-top">YMF825 Firmware</a>
 
 			</div><!--/ columns-->	
 		</div><!--/ container-->		
@@ -56,8 +56,8 @@
 
 
 			  <div id="link-fm-firm" class="columns five offset-by-two" style="background-color:#efefef; border:1px solid #efefef; border-radius:5px; padding:10px 20px;">
-				  <h3  id="link-fm-firm-title" style="background-color:#bfbfbf; border-radius:3px; margin-top:10px;">SD-1 Firmware</h3>
-				  <p>FM音源チップSD-1を搭載したデバイス用ファームウェア</p>
+				  <h3  id="link-fm-firm-title" style="background-color:#bfbfbf; border-radius:3px; margin-top:10px;">YMF825 Firmware</h3>
+				  <p>FM音源チップYMF825を搭載したデバイス用ファームウェア</p>
 			  </div><!--/ column-->
 
     </div><!--/ container-->
@@ -83,7 +83,7 @@
 	<script tyep="text/javascript">
   var linkList = [
       {"top":"#link-nsx1-apps-top", "link": "#link-nsx1-apps", "title": "#link-nsx1-apps-title", "url": "./nsx1-apps/manual/"}, // nsx1-apps
-       {"top":"#link-fm-firm-top", "link": "#link-fm-firm", "title": "#link-fm-firm-title", "url": "./nsx1-apps/manual/"}, // FM chip
+       {"top":"#link-fm-firm-top", "link": "#link-fm-firm", "title": "#link-fm-firm-title", "url": "./ymf825board/intro/"}, // ymf825board
    ];
 
   var bLink=[], bTitle=[];
