--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	</div><!--/ main-->
 	
 	<div class="band main">
-		<div class="container">
+		<div class="container links">
 			<hr style="margin-bottom:40px;">
 
 			  <div id="link-nsx1-apps" class="columns five offset-by-two" style="background-color:#efefef; border:1px solid #efefef; border-radius:5px; padding:10px 20px; margin-bottom:20px;">
